G'MIC: fix relative layer positioning

There are some filters that are still broken, these have been reported upstream.

BUG: 453477

Ref https://github.com/dtschump/gmic/issues/385